--- a/package.json
+++ b/package.json
@@ -7,12 +7,7 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "discord.js": "^12.5.3",
-    "fastify": "^3.14.1",
-    "fastify-formbody": "^5.0.0",
-    "fastify-static": "^4.0.0",
-    "handlebars": "^4.7.7",
-    "point-of-view": "^4.14.0"
+    "discord.js": "^12.5.3"
   },
   "engines": {
     "node": "12.x"
